--- a/src/main/webapp/css/signup.css
+++ b/src/main/webapp/css/signup.css
@@ -53,3 +53,20 @@ body {
     height: 50px;
     
 }
+
+.welcome {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh; /* 높이를 화면 전체 높이로 설정하여 세로 중앙 정렬 */
+}
+
+.welcome h2 {
+    margin: 10px 0;
+}
+
+.welcome a {
+    display: inline-block;
+    margin-top: 20px;
+}
