fix: 연결 수정중

--- a/src/main/webapp/layout/navbar.html
+++ b/src/main/webapp/layout/navbar.html
@@ -9,7 +9,7 @@
 <body>
 	<div class="nav-wrapper">
       <ul class="nav">
-        <li><a href="#">HOME</a></li>
+        <li><a href="main.jsp">HOME</a></li>
         <li><a href="#">MYPAGE</a></li>
       </ul>
     </div>
