feat: navbar에 마이페이지 연결

--- a/src/main/webapp/layout/navbar.html
+++ b/src/main/webapp/layout/navbar.html
@@ -10,7 +10,7 @@
 	<div class="nav-wrapper">
       <ul class="nav">
         <li><a href="main.jsp">HOME</a></li>
-        <li><a href="#">MYPAGE</a></li>
+        <li><a href="myPage.jsp">MYPAGE</a></li>
       </ul>
     </div>
 </body>
